refactor(config-server): 优化配置缓存对象相关锁操作